AppPaciente: lista diagnostico. AppMedico: orden
Se generan packages para ambos proyectos (models, adapters). Se usa el
AppPaciente.DiagnosticoAdapter para traducir de JSON a arraylist
(static) y de arraylist a listview(funcionamiento ya usado).

--- a/AppPaciente/ClinicaSantafePaciente/app/src/main/res/layout/content_detalle_paciente.xml
+++ b/AppPaciente/ClinicaSantafePaciente/app/src/main/res/layout/content_detalle_paciente.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.fabio.clinicasantafepaciente.DetallePacienteActivity"
-    tools:showIn="@layout/app_bar_detalle_paciente">
+    tools:showIn="@layout/app_bar_detalle_paciente"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/tvDetalle"
@@ -15,6 +16,13 @@
         android:text="Seleccione una acción del menú a la izquierda"
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:textSize="24sp"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="0dp" />
+    <ListView
+        android:id="@+id/list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1.04"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="0dp" />
 
