--- a/AppPaciente/ClinicaSantafePaciente/app/src/main/res/menu/activity_detalle_paciente_drawer.xml
+++ b/AppPaciente/ClinicaSantafePaciente/app/src/main/res/menu/activity_detalle_paciente_drawer.xml
@@ -13,12 +13,17 @@
         <item
             android:id="@+id/nav_diagnosticos"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Ver Diagnosticos" />
+            android:title="Ver diagnosticos" />
         <item
             android:id="@+id/nav_registros"
             android:icon="@drawable/ic_menu_manage"
             android:title="Ver registros de mediciones" />
+        <item
+            android:id="@+id/nav_consejos"
+            android:icon="@drawable/ic_menu_share"
+            android:title="Ver consejos recibidos" />
     </group>
 
 
 </menu>
+
