--- a/AppPaciente/ClinicaSantafePaciente/app/src/main/res/layout/item_tratamiento.xml
+++ b/AppPaciente/ClinicaSantafePaciente/app/src/main/res/layout/item_tratamiento.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
-        android:id="@+id/tvDescD"
+        android:id="@+id/tvDescT"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/fab_margin"
@@ -12,11 +12,20 @@
         android:textSize="@dimen/fab_txt_size"/>
 
     <TextView
-        android:id="@+id/tvFechaD"
+        android:id="@+id/tvFechaInicioT"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/fab_margin"
-        android:text="Fecha: "
+        android:text="Fecha Inicio: "
+        android:textAppearance="@style/TextAppearance.AppCompat"
+        android:textSize="@dimen/fab_txt_size"/>
+
+    <TextView
+        android:id="@+id/tvFechaFinT"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/fab_margin"
+        android:text="Fecha Fin: "
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:textSize="@dimen/fab_txt_size"/>
 </LinearLayout>
