--- a/AppPaciente/ClinicaSantafePaciente/app/src/main/res/layout/item_consejo.xml
+++ b/AppPaciente/ClinicaSantafePaciente/app/src/main/res/layout/item_consejo.xml
@@ -3,20 +3,19 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
-        android:id="@+id/tvDescD"
+        android:id="@+id/tvAsuntoC"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/fab_margin"
+        android:text="Asunto: "
+        android:textAppearance="@style/TextAppearance.AppCompat"
+        android:textSize="@dimen/fab_txt_size"/>
+    <TextView
+        android:id="@+id/tvDescC"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/fab_margin"
         android:text="Descripcion: "
-        android:textAppearance="@style/TextAppearance.AppCompat"
-        android:textSize="@dimen/fab_txt_size"/>
-
-    <TextView
-        android:id="@+id/tvFechaD"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/fab_margin"
-        android:text="Fecha: "
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:textSize="@dimen/fab_txt_size"/>
 </LinearLayout>
