--- a/AppMedico/ClinicaSantafeMedico/app/src/main/res/layout/content_detalle_paciente.xml
+++ b/AppMedico/ClinicaSantafeMedico/app/src/main/res/layout/content_detalle_paciente.xml
@@ -20,6 +20,14 @@
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="0dp" />
 
+    <ListView
+        android:id="@+id/list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1.04"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="0dp" />
+
     <EditText
         android:id="@+id/editAsunto"
         style="@style/Widget.AppCompat.AutoCompleteTextView"
