--- a/AppMedico/ClinicaSantafeMedico/app/src/main/res/layout/content_detalle_paciente.xml
+++ b/AppMedico/ClinicaSantafeMedico/app/src/main/res/layout/content_detalle_paciente.xml
@@ -9,7 +9,6 @@
     tools:context="com.example.fabio.clinicasantafemedico.DetallePacienteActivity"
     tools:showIn="@layout/app_bar_detalle_paciente">
 
-
     <TextView
         android:id="@+id/tvDetalle"
         android:layout_width="wrap_content"
@@ -19,6 +18,54 @@
         android:textSize="24sp"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="0dp" />
+
+    <LinearLayout
+        android:id="@+id/llRegistrosFechas"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/editFechaInicio"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/promt_fecha_inicio"
+                android:imeActionId="@+id/fechaInicio"
+                android:imeOptions="actionUnspecified"
+                android:inputType="date"
+                android:maxLines="1"
+                android:singleLine="true" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/editFechaFin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/prompt_fecha_fin"
+                android:imeActionId="@+id/fechaFin"
+                android:imeOptions="actionUnspecified"
+                android:inputType="date"
+                android:maxLines="1"
+                android:singleLine="true" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <Button
+            android:id="@+id/btnRangoFechas"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+    </LinearLayout>
 
     <ListView
         android:id="@+id/list"
